# spellbook

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini  metallic_refl.sbatex  spellbook.sln  spellbook.vcxproj  spellbook.vcxproj.filters
libs/: CMakeLists.txt  README.md  imgui_config.h
libs/GLFW/: .gitignore  README.md  glfw3.h  glfw3native.h
libs/dtoa/: dtoa.h  itoa.h
libs/lz4/: lz4.cpp  lz4.h  lz4hc.cpp  lz4hc.h
libs/neo_sequencer/: imgui_neo_sequencer.cpp  imgui_neo_sequencer.h
materials/: orange.sbtex
shaders/: blur.comp  depth_outline.comp  desert_rocks.frag  directional_depth.frag  directional_depth.vert  grid.frag  imgui.frag  (+12 more)
src/: CMakeLists.txt  asset_editor.cpp  asset_editor.hpp  astar.cpp  astar.hpp  camera_controller.cpp  camera_controller.hpp  color.cpp  color.hpp  console.cpp  console.hpp  file.cpp  file.hpp  game.cpp  game.hpp  geometry.cpp  geometry.hpp  global.hpp  gui.cpp  gui.hpp  h_impl.cpp  hash.hpp  id_ptr.hpp  input.cpp  input.hpp  json.cpp  json.hpp  lni_vector.hpp  main.cpp  math.cpp  math.hpp  matrix.hpp  matrix_math.cpp  matrix_math.hpp  quaternion.cpp  quaternion.hpp  scene.cpp  scene.hpp  slotmap.hpp  spline.hpp  (+5 more)
src/assets/: asset_main.cpp  asset_main.hpp  material_asset.cpp  material_asset.hpp  prefab_asset.cpp  prefab_asset.hpp
src/editor/: CMakeLists.txt  asset_browser.cpp  asset_browser.hpp  asset_editor.cpp  asset_editor.hpp  console.cpp  console.hpp  debug_ui.cpp  debug_ui.hpp  editor_scene.cpp  editor_scene.hpp  file_browser.cpp  file_browser.hpp  game_scene.cpp  game_scene.hpp  gui.cpp  gui.hpp  hit_test_scene.cpp  hit_test_scene.hpp  map_editor.cpp  map_editor.hpp  pose_widget.cpp  pose_widget.hpp  resource_editor.cpp  resource_editor.hpp  skeleton_widget.cpp  skeleton_widget.hpp  test_scene.cpp  test_scene.hpp  widget_system.cpp  widget_system.hpp
src/extension/: fmt.hpp  fmt_geometry.hpp  fmt_renderer.hpp  glfw.cpp  glfw.hpp  imgui_extra.cpp  imgui_extra.hpp  vuk_imgui.cpp  vuk_imgui.hpp
src/extension/icons/: font_awesome4.h
src/game/: CMakeLists.txt  ability.cpp  ability.hpp  asset_browser.cpp  asset_browser.hpp  asset_editor.cpp  asset_editor.hpp  audio.cpp  audio.hpp  camera_controller.cpp  camera_controller.hpp  components.cpp  components.hpp  consumer.cpp  consumer.hpp  enemy.cpp  enemy.hpp  game.cpp  game.hpp  game_file.cpp  game_file.hpp  game_path.cpp  game_path.hpp  general.hpp  gui.cpp  gui.hpp  input.cpp  input.hpp  json_cache.cpp  json_cache.hpp  lizard.cpp  lizard.hpp  map.cpp  map.hpp  map_editor.cpp  map_editor.hpp  map_targeting.cpp  map_targeting.hpp  player.cpp  player.hpp  (+24 more)
src/game/effects/: CMakeLists.txt  hit.cpp  hit.hpp  hit_effect.cpp  hit_effect.hpp  text_layer.cpp  text_layer.hpp
src/game/entities/: CMakeLists.txt  ability.cpp  ability.hpp  area_trigger.cpp  area_trigger.hpp  caster.cpp  caster.hpp  component_shared.hpp  components.cpp  components.hpp  consumer.cpp  consumer.hpp  drop.cpp  drop.hpp  enemy.cpp  enemy.hpp  enemy_ik.cpp  enemy_ik.hpp  impair.cpp  impair.hpp  lizard.cpp  lizard.hpp  projectile.cpp  projectile.hpp  spawner.cpp  spawner.hpp  stat.cpp  stat.hpp  tags.cpp  tags.hpp  targeting.cpp  targeting.hpp  team.hpp  tile.cpp  tile.hpp
src/game/entities/items/: basic_stat_items.hpp  item.hpp
src/game/entities/lizards/: CMakeLists.txt  assassin.cpp  barbarian.cpp  champion.cpp  druid.cpp  illusion_mage.cpp  instance_lizard.hpp  laser_mage.cpp  lizard.cpp  lizard.hpp  lizard_builder.hpp  lizard_template.cpp  mind_mage.cpp  ranger.cpp  thief.cpp  treasurer.cpp  warlock.cpp  water_mage.cpp
src/game/gui/: CMakeLists.txt  card_gui.cpp  card_gui.hpp  gui_items.cpp  gui_items.hpp  gui_manager.cpp  gui_manager.hpp  shop_gui.cpp  shop_gui.hpp
src/general/: CMakeLists.txt  astar.cpp  astar.hpp  bitmask_3d.cpp  bitmask_3d.hpp  color.cpp  color.hpp  file.cpp  file.hpp  geometry.cpp  geometry.hpp  hash.hpp  id_ptr.hpp  json.cpp  json.hpp  json_cache.cpp  logger.cpp  logger.hpp  math.cpp  math.hpp  matrix.hpp  matrix_math.cpp  matrix_math.hpp  path.cpp  path.hpp  quaternion.cpp  quaternion.hpp  slotmap.hpp  spline.hpp  string.hpp  umap.hpp  var_system.cpp  var_system.hpp  vector.hpp
src/lib/: astar.cpp  astar.hpp  color.cpp  color.hpp  file.cpp  file.hpp  geometry.cpp  geometry.hpp  hash.hpp  id_ptr.hpp  json.cpp  json.hpp  math.cpp  math.hpp  matrix.hpp  matrix_math.cpp  matrix_math.hpp  quaternion.hpp  spline.hpp  umap.hpp  var_system.cpp  var_system.hpp  vector.hpp
src/lib_ext/: fmt_geometry.hpp  fmt_renderer.hpp  glfw.cpp  glfw.hpp  imgui_extra.cpp  imgui_extra.hpp  vuk_imgui.cpp  vuk_imgui.hpp
src/lib_ext/icons/: font_awesome4.h
src/renderer/: CMakeLists.txt  camera.cpp  camera.hpp  draw_functions.cpp  draw_functions.hpp  fmt_renderer.hpp  font_manager.cpp  font_manager.hpp  gpu_asset_cache.cpp  gpu_asset_cache.hpp  image.hpp  light.cpp  light.hpp  loader.cpp  loader.hpp  render_scene.cpp  render_scene.hpp  renderable.cpp  renderable.hpp  renderer.cpp  renderer.hpp  samplers.cpp  samplers.hpp  utils.hpp  vertex.cpp  vertex.hpp  viewport.cpp  viewport.hpp
src/renderer/assets/: animation_state.hpp  asset_loader.cpp  asset_loader.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_asset.cpp  mesh_asset.hpp  model.cpp  model.hpp  particles.cpp  particles.hpp  prefab.cpp  prefab.hpp  skeleton.cpp  skeleton.hpp  texture.cpp  texture.hpp  texture_asset.cpp  texture_asset.hpp
src/shaders/: compile_shaders.bat  depth_outline.comp  desert_rocks.frag  directional_depth.frag  grid.frag  imgui.frag  imgui.frag.spv  imgui.vert.spv  include.glsli  infinite_plane.vert  particle.vert  particle_emitter.comp  point_depth.frag  rt.rmiss  standard_3d.vert  textured_3d.frag  widget.frag  widget.vert
(+7 files in other folders)
